# lakeinterface

./: 99_utilities.html  Pipfile  README.md  core.html  datalake.html  index.html  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
.github/workflows/: deploy.yaml  main.yaml  test.yaml
lake_interface/: _modidx.py  lake_interface.py
lakeinterface/: __init__.py  _modidx.py  athena.py  aurora.py  config.py  csv_s3_object.py  datalake.py  exceptions.py  json_s3_object.py  lake.py  lake_utils.py  logger.py  object_operations.py  parquet_s3_object.py  path_handler.py  s3.py  s3_object.py  s3_object_factory.py  s3_object_manager.py  utilities.py  utils.py  version_manager.py
nbs/: 01_config.ipynb  01_datalake.ipynb  01a_logger.ipynb  02_s3.ipynb  03_aurora.ipynb  04_athena.ipynb  10_datalake.ipynb  99_utilities.ipynb  index.ipynb  nbdev.yml  polars_exploring.ipynb  pytest_setup.ipynb  scratchpad.ipynb  sidebar.yml
tests/: test_config.py  test_datalake.py  test_file_management.py  test_logger.py  test_metadata.py
tests/test_objects/: H8_struct.xml
