[tool.poetry]
name = "lakeinterface"
version = "v1.0.22"
description = ""
authors = ["Ian McAllister <ian@mcallisternevins.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
polars = ">=1.26.0,<2.0.0"
boto3 = "^1.31.1"
s3fs = "^2024.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyterlab = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
